# client-adapter-rust

./: .gitignore  README.md  azure-pipelines.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
ah_adapter_app/: Cargo.toml
ah_adapter_app/doc/: ah_adapter_app_developer_manual.md  ah_adapter_app_structs.puml  ah_adapter_app_user_manual.md
ah_adapter_app/src/: consoleapp.rs  controller.rs  datastore.rs  main.rs  serde_table.rs  settings.rs
ah_system_adapter/: Cargo.toml
ah_system_adapter/doc/: ah_system_adapter_dtos.puml
ah_system_adapter/src/: dtos.rs  error.rs  lib.rs
