[package]
name = "ah_adapter_app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ah"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ah_system_adapter = { path = "../ah_system_adapter" }
clap = { version = "3.1.8", features = ["derive"] }
regex = "1.5.5"
serde =  { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
