[package]
name = "ah_system_adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.11.10", features = ["blocking", "json"] }
serde =  { version = "1.0.136", features = ["derive"] }

# Needed because crate reqwest does not expose ParseError on public API
url = "2.2.2"

[dev-dependencies]
mockito = "0.31.0"
serde_json = "1.0.79"
